Code refactoring and deleted some classes